--- a/literacy/index.html
+++ b/literacy/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Циклы статей о финансовой грамотности" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2020-05-06" />
+        <meta property="og:article:modified_time" content="2020-05-19" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -93,6 +93,7 @@
 <li><a href="/literacy/instruments/gold">Золото</a></li>
 <li><a href="/literacy/instruments/realty">Недвижимость</a></li>
 <li><a href="/literacy/instruments/stocks">Акции</a></li>
+<li><a href="/literacy/instruments/crypto">Криптовалюты</a></li>
 </ol>
         </div>
         <aside>
