--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-02-01" />
-        <meta property="og:article:modified_time" content="2020-02-04" />
+        <meta property="og:article:modified_time" content="2020-05-16" />
 <meta property="og:title" content="Инфляция" />
 <meta property="og:url" content="https://onfin.github.io/notes/inflation" />
 
@@ -57,7 +57,7 @@
             <h1>Инфляция</h1>
             <div class="meta">
                     <p class="description">Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно</p>
-                    <p> Обновлено: <time>2020-02-04</time> </p>
+                    <p> Обновлено: <time>2020-05-16</time> </p>
 
             </div>
         </header>
@@ -91,6 +91,7 @@
 <p>Важно понимать, что только рост денежной массы и ненулевая стоимость денег — монетарные факторы — действуют постоянно и ведут к постоянному росту цен. Все остальные факторы действуют разово: изменилась цена сырья, стоимость кредитов, налоговая нагрузка — предприятие учло это изменение в цене и всё, дальнейшего роста нет. С течением времени эти разовые факторы разворачиваются и цены снижаются обратно. Так что в долгосрочном периоде на цены влияет только монетарная составляющая.</p>
 <p>Поэтому я предпочитаю только её называть инфляцией. К тому же, только монетарные факторы действуют на всю экономику равномерно и транслируются в пропорциональный рост выручки и прибыли компаний. Так что когда говорят, что акции защищают от инфляции — имеется в виду только эта её часть, и то частично. Потому что рост стоимости денег ведёт к росту стоимости кредитования — а это уже дополнительные издержки, которые акционеры вынуждены нести (спрос в эти моменты тоже падает из-за снижения кредитования и переложить эти издержки на потребителя уже не получится).</p>
 <p>Из списка немонетарных факторов я бы отдельно поставил научно-технический прогресс и изменение структуры потребления и назвал вызванное ими изменение ИПЦ <em>структурной инфляцией</em>. Потому что остальные факторы имеют тенденцию возвращаться к среднему на долгосрочном периоде, а эти два вызывают изменение структуры экономики и их эффект постоянен.</p>
+<p><a id="regulation"></a></p>
 <h2 id="_3">Управление инфляцией</h2>
 <p>К сожалению, рыночная экономика неустойчива по денежному обращению. Из-за конечной скорости производственного цикла.</p>
 <p>Предприятие заключило договор на закупку сырья и поставку продукции, что-то производит, что-то отгружает. И те, и другие цены зафиксированы на достаточно длительный срок, порядка года. Если за это время вырастут цены (пусть из-за какой-то случайной флуктуации), то у предприятия не хватит денег на полную загрузку следующего цикла. Оно попытается, насколько возможно, компенсировать свои убытки <em>опережающим</em> повышением стоимости продукции в следующем году. Одновременно с этим упадёт выпуск, что создаст дефицит и также двинет цены вверх. То же сделают все остальные предприятия в производственной цепочке, которая, замкнувшись, запустит следующий цикл повышения цен и падения производства. Так получается <em>стагфляция</em> — рост цен при стагнации или падении производства. Так как не все производственные цепочки замкнуты, этот процесс с течением времени затухнет, однако глубина падения производства (= уровня жизни) может быть катастрофической.</p>
