--- a/literacy/instruments/stocks.html
+++ b/literacy/instruments/stocks.html
@@ -288,7 +288,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/literacy/instruments/realty"> &lt;&lt; Недвижимость </a></div>
     <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/instruments/crypto"> Криптовалюты &gt;&gt; </a></div>
     </div>
 </div>
 </div>
