--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Краткий обзор инструментов сбережения. Сколько и во что вкладывать</h1>
-            <div class="meta">
-                    <p class="description">Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов.</p>
-                    <p> Обновлено: <time>2019-11-17</time> </p>
+<article>
+    <header>
+        <h1>Краткий обзор инструментов сбережения. Сколько и во что вкладывать</h1>
+        <div class="meta">
+                <p class="description">Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов.</p>
+                <p> Обновлено: <time>2019-11-17</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Строго говоря, <em>доход</em> можно получить единственным способом — создать и продать ценность. Всё остальное — либо подарки, либо компенсации, либо воровство.</p>
+    <div class="content">
+        <p>Строго говоря, <em>доход</em> можно получить единственным способом — создать и продать ценность. Всё остальное — либо подарки, либо компенсации, либо воровство.</p>
 <p>Создание и купля-продажа ценностей — это про работу и бизнес, тут каждый во что горазд; охота за подарками и воровство — занятия ненадёжные; а вот за что платят компенсации? Платят их за <em>риск</em>. Все операции с финансовыми инструментами — это обмен одних рисков на другие.</p>
 <div class="toc">
 <ul>
@@ -214,9 +212,9 @@
 (Привет тем, у кого «Америка только растёт».)</p>
 <p>Видно, что до 2008г доходность по американским акциям не могла обогнать российскую инфляцию вкупе с обесценением доллара относительно рубля. Российский же рынок уверенно рос, пока не <em>перерос себя</em> к тому же 2008г и совершенно перестал приносить прибыль после восстановления (восстановился он на возврате стоимости нефти к докризисным значениям в 2011г, но с тех пор она падает, доходность индекса около нуля держат другие отрасли), тогда как американский показал четырёхкратную доходность. Также глазу заметна куда бо́льшая стабильность американского индекса — это результат сбалансированности экономических факторов.</p>
 <p>Важное свойство общерыночного риска — обоюдоострость, причём опаснее та сторона, что завышает стоимость активов выше справедливой. Потому что мы можем не продавать доходные активы себе в убыток, но вот вероятность купить их по ценам, которые приведут к отрицательной доходности на ближайшие пару десятилетий (как американские акции в 2000 или российские в 2008) — есть всегда, и её реализации надо старательно избегать.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments&title=Краткий обзор инструментов сбережения. Сколько и во что вкладывать&description=Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -224,25 +222,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/cards"> &lt;&lt; Банковские карты </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/taxes"> Брокерский счёт: как рассчитываются и уплачиваются налоги &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/cards"> &lt;&lt; Банковские карты </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/taxes"> Брокерский счёт: как рассчитываются и уплачиваются налоги &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
