--- a/pages/halava.html
+++ b/pages/halava.html
@@ -27,23 +27,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -52,20 +52,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Халява</h1>
-            <div class="meta">
-                    <p class="description">Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке.</p>
-                    <p> Обновлено: <time>2019-10-18</time> </p>
+<article>
+    <header>
+        <h1>Халява</h1>
+        <div class="meta">
+                <p class="description">Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке.</p>
+                <p> Обновлено: <time>2019-10-18</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <div class="toc">
+    <div class="content">
+        <div class="toc">
 <ul>
 <li><a href="#tinkoff-black">Tinkoff Black</a></li>
 <li><a href="#tinkoff-allairlines">Tinkoff AllAirlines</a></li>
@@ -185,9 +183,9 @@
 </div>
 
 <p>Тема с промокодами и приглашениями на разные прочие сервисы/банки ко взаимной выгоде есть на <a href="http://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=27">форуме Склянок</a>.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/pages/halava&title=Халява&description=Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/pages/halava" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -195,12 +193,10 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/pages/halava" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
