--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Калькуляторы кредитов</h1>
-            <div class="meta">
-                    <p class="description">Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением.</p>
-                    <p> Обновлено: <time>2020-02-18</time> </p>
+<article>
+    <header>
+        <h1>Калькуляторы кредитов</h1>
+        <div class="meta">
+                <p class="description">Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением.</p>
+                <p> Обновлено: <time>2020-02-18</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <script type="text/javascript" src="/js/forms.js"></script>
+    <div class="content">
+        <script type="text/javascript" src="/js/forms.js"></script>
 
 <script type="text/javascript" src="/js/nunjucks.min.js"></script>
 
@@ -329,9 +327,9 @@
             extra: (Math.pow(capitalWithCredit/capitalWithSavings, 12.0/data.months)-1)*100};
     }
 </script>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/calculators/credits&title=Калькуляторы кредитов&description=Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/calculators/credits" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -339,25 +337,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/calculators/credits" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"></div>
-    <div class="pure-u-1-3 center"><a href="/calculators"> &uarr; Калькуляторы &uarr; </a></div>
-    <div class="pure-u-1-3 right"></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="up" href="/calculators"> &uarr; Калькуляторы &uarr; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
