--- a/donate.html
+++ b/donate.html
@@ -20,23 +20,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -45,26 +45,24 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Отблагодарить</h1>
-            <div class="meta">
-            </div>
-        </header>
+<article>
+    <header>
+        <h1>Отблагодарить</h1>
+        <div class="meta">
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Сайт принципиально делается безо всякого даже прицела на коммерциализацию, на одном энтузиазме. Подогреть энтузиазм, засвидетельствовав размер полезности оного, можно здесь:</p>
+    <div class="content">
+        <p>Сайт принципиально делается безо всякого даже прицела на коммерциализацию, на одном энтузиазме. Подогреть энтузиазм, засвидетельствовав размер полезности оного, можно здесь:</p>
 <div style="display: flex; flex-direction: column">
     <a href="https://ru.liberapay.com/blksv/donate" target="blank">LiberaPay (подписка)</a>
     <a href="https://www.patreon.com/blksv" target="blank">Patreon (подписка)</a>
     <a href="https://money.yandex.ru/to/410011254416486/200" target="blank">ЯндексДеньги (разово)</a>
     <a href="https://paypal.me/blksv/200RUR" target="blank">PayPal (разово)</a>
 </div>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/donate&title=Отблагодарить&description=" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/donate" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -72,12 +70,10 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/donate" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
