--- a/literacy/aboutmoney.html
+++ b/literacy/aboutmoney.html
@@ -20,23 +20,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -45,19 +45,17 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Про деньги</h1>
-            <div class="meta">
-                    <p> Обновлено: <time>2019-10-14</time> </p>
+<article>
+    <header>
+        <h1>Про деньги</h1>
+        <div class="meta">
+                <p> Обновлено: <time>2019-10-14</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Для накопления финансового капитала представления об экономике и денежном обращении, в общем-то, неважны, хотя и небезинтересны.</p>
+    <div class="content">
+        <p>Для накопления финансового капитала представления об экономике и денежном обращении, в общем-то, неважны, хотя и небезинтересны.</p>
 <p>Рассмотрим модельную деревню, в которой есть только хлеборобы и сапожники, а денег нет. На ярмарку они привозят G мер зерна и B пар сапог. Что не получилось обменять до следующей ярмарки пропадёт — сгниёт или мыши съедят, поэтому тороговаться будут до последнего и обменяют всё на всё. Тогда «цена» пары сапог окажется G/B мер зерна, а «цена» меры зерна, соответственно, — B/G пар сапог.</p>
 <p>Эти «цены» вполне удовлетворяют представлениям о справедливости обоих сторон — ничей труд напрасно не пропал, хотя, возможно, и получено за него было менее ожидаемого. А вот если какой-то «просвещённый барин» решит, что, скажем, сапожники должны за пару сапог получать больше зерна, то часть сапожников продать свой товар не успеет (зерно кончится раньше чем сапоги), и умрёт с голоду. Эти же непроданные сапоги не достанутся тогда каким-то крестьянам, они простудятся, заболеют, и тоже умрут. В обратную сторону результат примерно тот же.</p>
 <p>Обратите внимание, что такая справедливая цена, при которой и крестьяне обуты, и сапожники накормлены, не включает в себя ни себестоимость, ни трудозатраты. А только количество зерна и сапог на рынке. А результат деятельности просвещённых социалистических бар, которые берутся рассчитывать «справедливую» цену из себестоимости, трудозатрат, степени квалифицированности труда и прочих параметров, мы уже увидели.</p>
@@ -70,9 +68,9 @@
 <p>Тогда, чтобы вновь обменять все сапоги на всё зерно, цены на нашей ярмарке должны удовлетворять следующему условию:</p>
 <p>$$ P_B \cdot B + P_G \cdot G = V(M + \Delta S), $$</p>
 <p>где $P_B$ и $P_G$ это цены сапог и зерна уже «в деньгах», $M + \Delta S$ — количество денег, которое у крестьян было «в обороте» + то, что достали из кубышек (или убрали в них, тогда $\Delta S &lt; 0$), а $V$ — это сколько раз эти деньги за время ярмарки обернулись.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/aboutmoney&title=Про деньги&description=" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -80,25 +78,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/reserves"> &lt;&lt; Формирование резервов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
