--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,29 +50,27 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Выбор базового банка</h1>
-            <div class="meta">
-                    <p class="description">В чём роль и важность базового банка? Как его правильно выбирать?</p>
-                    <p> Обновлено: <time>2019-11-09</time> </p>
+<article>
+    <header>
+        <h1>Выбор базового банка</h1>
+        <div class="meta">
+                <p class="description">В чём роль и важность базового банка? Как его правильно выбирать?</p>
+                <p> Обновлено: <time>2019-11-09</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Базовый банк — то место, откуда вы управляете своими денежными потоками. Вести все свои дела из одного банка удобно, однако выгодные предложения для разных целей обычно бывают в разных банках, да и для безопасности своих финансов разумно их разделять между несколькими.</p>
+    <div class="content">
+        <p>Базовый банк — то место, откуда вы управляете своими денежными потоками. Вести все свои дела из одного банка удобно, однако выгодные предложения для разных целей обычно бывают в разных банках, да и для безопасности своих финансов разумно их разделять между несколькими.</p>
 <p>В базовом банке вы храните оперативный резерв и резерв предстоящих расходов. На деньги обязательно должны начисляться проценты, чтобы хоть как-то компенсировать их обесценение, и эти проценты должны быть не подачкой от банка, а нормальной среднерыночной ставкой. Обычные варианты для хранения — <em>накопительный счёт</em> и <em>расходно-пополняемый вклад</em>. Можно также хранить деньги на <em>доходной карте</em> (дебетовой карте, на остаток по которой начисляется высокий процент), но этот вариант считается более рискованным.</p>
 <p>Подводных камней здесь <a href="/literacy/deposits">великое множество</a>, поэтому, если банк устанавливает дополнительные условия по начислению процентов или бесплатности обслуживания, убедитесь, что вы можете их стабильно выполнять не «в принципе», а с учётом сложившейся практики и альтернативных издержек: например, не стоит без расчёта переносить расходы с карт с кэшбэком на доходные — обычно это приводит к большей потере денег, чем неначисленные проценты. <strong>И никогда не ведитесь на ставки в рекламных баннерах. Всегда внимательно читайте условия по вкладу/карте и рассчитывайте свой случай. И всегда следите за изменением условий.</strong></p>
 <p>Не стоит упускать из внимания и неснижаемые остатки. Это «длинные» деньги, и желательно получать на них соответствующие проценты. Например, минимальный остаток на расходно-пополняемом вкладе в банке Открытие составляет 50Кр при ставке 5,5%г на годовом вкладе, а ОФЗ с погашением через год дадут 7,5%г — получаем «стоимость обслуживания» такого расходно-пополняемого вклада 930р/год.</p>
 <p>Так как деньги из оперативного резерва нужно рассылать по разным банкам (и, возможно, пополнять этот резерв из разных банков), все виды <a href="/literacy/moneytransfer">денежных переводов</a> через базовый банк должны быть бесплатны в тех пределах, в которыми вы будете ими пользоваться. Даже при возможности бесплатного пополнения резерва с зарплатной карты другого банка, получение з/п лучше перевести в базовый банк чтобы минимизировать <a href="/literacy/moneytransfer#transit">транзит</a>.</p>
 <p>Разумеется, базовое обслуживание в базовом банке должно быть бесплатным <em>для вас</em>. Необязательно вышеперечисленное будет бесплатным в основных тарифах. Банки обычно предлагают некоторые свои сервисы бесплатно тем, кто получает з/п на карту этого банка или открыл в нём крупный вклад. Платные тарифы (обычно прилагаются к карточкам разной степени премиальности) тоже не надо сбрасывать со счетов: возможно, плюшки по этим тарифам (например, повышенный кэшбэк или туристическая страховка) принесут денег больше, чем стоит его обслуживание; но базовое обслуживание в расчёте этой экономии учитывать нельзя — оно должно быть бесплатным безусловно.</p>
 <p>Если базовый банк выполняет лишь функции <em>диспетчера оперативного резерва</em>, то особенных требований к его надёжности нет. Однако если вы выбрали на эту роль сомнительный банк, то разумно найти ещё один, удовлетворяющий требованиям базовости, и размесить часть резервов там.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/basebank&title=Выбор базового банка&description=В чём роль и важность базового банка? Как его правильно выбирать?" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -80,25 +78,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
