--- a/literacy/cards.html
+++ b/literacy/cards.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Банковские карты</h1>
-            <div class="meta">
-                    <p class="description">Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</p>
-                    <p> Обновлено: <time>2019-10-14</time> </p>
+<article>
+    <header>
+        <h1>Банковские карты</h1>
+        <div class="meta">
+                <p class="description">Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</p>
+                <p> Обновлено: <time>2019-10-14</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>В неустанной заботе об удобстве клиентов и своей выгоде, банки изобретают всё более совершенные способы оплаты покупок. Банковский пластик, на данный момент, — уже пройденная вершина, в связи с развитием технологий бесконтактной оплаты, однако организационно это всё ещё старые добрые карты. О них и поговорим.</p>
+    <div class="content">
+        <p>В неустанной заботе об удобстве клиентов и своей выгоде, банки изобретают всё более совершенные способы оплаты покупок. Банковский пластик, на данный момент, — уже пройденная вершина, в связи с развитием технологий бесконтактной оплаты, однако организационно это всё ещё старые добрые карты. О них и поговорим.</p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Общие представления</a></li>
@@ -122,9 +120,9 @@
 <p>Даже неиспользуемая кредитка болтается в вашей кредитной истории и смущает банки, от которых вам могут впоследствии понадобиться какие-то плюшки, бесплатные или хотя бы дешёвые деньги.</p>
 <p>Набирающие популярность карты рассрочки — те же длинногрейсовые кредитки, только с увеличенными ежемесячными платежами (вместо 5% — треть-четверть суммы покупки).</p>
 <p>Банки неохотно делятся информацией сколько клиентов использует кредитку правильно — не платя банку комиссий (кроме годового обслуживания, если есть) и процентов, — но проскакивает информация что не более 30%. Выгода банков, при таких процентах, колоссальная и на привлечение новых пользователей кредиток денег не жалеют. А свою выгоду посчитаем на <a href="/literacy/cardscalc">практике</a>.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cards&title=Банковские карты&description=Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/cards" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -132,25 +130,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cards" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/deposits"> &lt;&lt; Размещение средств в банках </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/instruments"> Краткий обзор инструментов сбережения. Сколько и во что вкладывать &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/deposits"> &lt;&lt; Размещение средств в банках </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments"> Краткий обзор инструментов сбережения. Сколько и во что вкладывать &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
