--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Использование и расчёт банковских карт</h1>
-            <div class="meta">
-                    <p class="description">Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</p>
-                    <p> Обновлено: <time>2019-11-19</time> </p>
+<article>
+    <header>
+        <h1>Использование и расчёт банковских карт</h1>
+        <div class="meta">
+                <p class="description">Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</p>
+                <p> Обновлено: <time>2019-11-19</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Основные аргументы в пользу банковских карт — это их удобство и выгода вплоть до халявы. Однако финансово грамотный человек не ищет халявы, а минимизирует свои расходы и риски, которые <a href="/literacy/notaboutmoney">не всегда денежные</a>, сообразуясь с собственной психологией и дисциплиной.</p>
+    <div class="content">
+        <p>Основные аргументы в пользу банковских карт — это их удобство и выгода вплоть до халявы. Однако финансово грамотный человек не ищет халявы, а минимизирует свои расходы и риски, которые <a href="/literacy/notaboutmoney">не всегда денежные</a>, сообразуясь с собственной психологией и дисциплиной.</p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Общие соображения</a></li>
@@ -247,9 +245,9 @@
 <h2 id="_7">О закрытии карт</h2>
 <p>Бесплатные дебетовые карты могут вполне себе и лежать на полке, ожидая своего часа. Бесплатные кредитки с небольшими лимитами — тоже. Только отслеживайте акутуальные условия по ним, вдруг они перестанут быть бесплатными. Платные карты и кредитки со значительными лимитами, если становятся не нужны, лучше закрывать.</p>
 <p>Единственный способ закрыть карту — написать в банке соответствующее заявление (и лучше взять с собой подтверждающий документ). Ни оставление карты на полке, ни даже её блокировка не прекращают обслуживание банком счёта карты (блокировка действует только на стороне платёжной системы). Соответственно, все лимиты будут открытыми, а комиссии — списываться (возможно, в долг или овердрафт под проценты).</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cardscalc&title=Использование и расчёт банковских карт&description=Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -257,25 +255,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/basebank"> &lt;&lt; Выбор базового банка </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/credits"> Математика кредитов &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/basebank"> &lt;&lt; Выбор базового банка </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/credits"> Математика кредитов &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
