--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Математика кредитов</h1>
-            <div class="meta">
-                    <p class="description">Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?</p>
-                    <p> Обновлено: <time>2019-10-16</time> </p>
+<article>
+    <header>
+        <h1>Математика кредитов</h1>
+        <div class="meta">
+                <p class="description">Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?</p>
+                <p> Обновлено: <time>2019-10-16</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Если вам не интересна теория — переходите сразу к <a href="/calculators/credits">калькулятору</a>.</p>
+    <div class="content">
+        <p>Если вам не интересна теория — переходите сразу к <a href="/calculators/credits">калькулятору</a>.</p>
 <p>Кредит — это способ воспользоваться деньгами банка за некоторую плату. Очевидно, пользоваться кредитами имеет смысл только тогда, когда это принесёт больший доход, чем будет выплачено процентов. Однако рассчитывать кредиты довольно сложно и по интернетам разгуливает изрядное количество дури по этому поводу (у одного — <a href="http://capitalgains.ru/obrazovanie/lichnye-finansy/annuitetnaya-shema-pogasheniya-kredita.html">аннуитеты впаривают</a>, другой — <a href="https://daskonto.ru/banki/na-puti-k-zrelosti">взял кредит под 11%г, чтобы положить под 7</a> и считает, что это выгодно).</p>
 <p>Разберёмся сперва с формами погашения. При аннуитетных платежах вы всегда отдаёте банку одну и ту же сумму, часть суммы идёт в погашение процентов, а часть — кредита. Дифференцированный платёж состоит из двух частей: фиксированной суммы в погашение кредита, и платёж по процентам на остаток задолженности. В схематичном виде выглядит это так (здесь на вертикальной оси выплаты по долгу и процентам представлены в процентах от аннуитетного платежа, а остаток по кредиту — от его начальной суммы, по горизонтальной оси — годы):</p>
 <div style="width: 100%">
@@ -96,9 +94,9 @@
 
 <p>Сравниваем сценарии, где мы поддерживаем резерв по выплатам на полгода вперёд (направляя начисленные проценты на погашение кредита, а когда он уменьшится до размера резерва — погашая его полность.) и где сразу погашаем часть кредита на размер резерва (но не уменьшая при этом ежемесячный платёж: всё-таки, выгоднее гасить кредит раньше). Как видно, реальный размер выплат с учётом инфляции различается незначительно.</p>
 <p>Статья будет пополняться новыми разборами.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/credits&title=Математика кредитов&description=Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -106,25 +104,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/cardscalc"> &lt;&lt; Использование и расчёт банковских карт </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/brokers"> Как выбрать брокера &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/cardscalc"> &lt;&lt; Использование и расчёт банковских карт </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/brokers"> Как выбрать брокера &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
