--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -39,23 +39,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -64,20 +64,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Размещение средств в банках</h1>
-            <div class="meta">
-                    <p class="description">Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов.</p>
-                    <p> Обновлено: <time>2020-01-02</time> </p>
+<article>
+    <header>
+        <h1>Размещение средств в банках</h1>
+        <div class="meta">
+                <p class="description">Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов.</p>
+                <p> Обновлено: <time>2020-01-02</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Прежде чем рассказывать о банковских сервисах по размещению денег, хочу ещё раз произнести фундаментальную истину по их поводу. Деньги, которые вы отнесли в банк, — <strong>больше не ваши деньги</strong>, это деньги банка. В обмен на них вы получили обязательство банка по возврату вам долга и оплаты его использования (в форме процентов или услуг). Точно так же, как деньги полученные вами в кредит от банка — больше не деньги банка, в обмен на них банк получил ваше обязательство по возврату долга и оплаты его использования. Кредит и депозит — это полностью симметричные операции. К сожалению, маркетологи банков часто сами этого не осознают, придумывая очень странные схемы начисления, например, процентов на остатки по картам и счетам, а юридически они потом оформляются ещё страннее (потому что это явная нелепица: определять стоимость заимствования в зависимости от совершения заимодавцем (не должником!) не связанных с займом действий).</p>
+    <div class="content">
+        <p>Прежде чем рассказывать о банковских сервисах по размещению денег, хочу ещё раз произнести фундаментальную истину по их поводу. Деньги, которые вы отнесли в банк, — <strong>больше не ваши деньги</strong>, это деньги банка. В обмен на них вы получили обязательство банка по возврату вам долга и оплаты его использования (в форме процентов или услуг). Точно так же, как деньги полученные вами в кредит от банка — больше не деньги банка, в обмен на них банк получил ваше обязательство по возврату долга и оплаты его использования. Кредит и депозит — это полностью симметричные операции. К сожалению, маркетологи банков часто сами этого не осознают, придумывая очень странные схемы начисления, например, процентов на остатки по картам и счетам, а юридически они потом оформляются ещё страннее (потому что это явная нелепица: определять стоимость заимствования в зависимости от совершения заимодавцем (не должником!) не связанных с займом действий).</p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Текущие банковские счета</a></li>
@@ -137,9 +135,9 @@
 <p>Некоторые банки на остаток по своим дебетовкам начисляют весьма высокие проценты (иногда даже не выдвигая дополнительных требований, или делая их несущественными). Такие карты называют <em>доходными</em>, ими вполне можно пользоваться как обычным накопительным счётом, но для этого нужно снизить доступные лимиты на операции по карте до уровня текущих расходов (если они будут совершаться с этой карты).</p>
 <h2 id="_5">Проверка надёжности банка</h2>
 <p>Я смотрю аналитические отчёты по банкам на этих сервисах: <a href="http://kuap.ru/">Куап</a> — подробная финансовая отчётность и здоровье банков, <a href="http://www.analizbankov.ru/">Анализ банков</a> — то же, но есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/deposits&title=Размещение средств в банках&description=Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -147,25 +145,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/moneytransfer"> &lt;&lt; Денежные переводы </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/cards"> Банковские карты &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/moneytransfer"> &lt;&lt; Денежные переводы </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/cards"> Банковские карты &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
