--- a/literacy/instruments/crypto.html
+++ b/literacy/instruments/crypto.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Криптовалюты</h1>
-            <div class="meta">
-                    <p class="description">Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</p>
-                    <p> Обновлено: <time>2020-05-19</time> </p>
+<article>
+    <header>
+        <h1>Криптовалюты</h1>
+        <div class="meta">
+                <p class="description">Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</p>
+                <p> Обновлено: <time>2020-05-19</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <div class="toc">
+    <div class="content">
+        <div class="toc">
 <ul>
 <li><a href="#_1">Общие представления</a></li>
 <li><a href="#_2">Криптовалюты как валюты</a></li>
@@ -110,9 +108,9 @@
 <p>На моё предположение об отрицательной (или хотя бы нулевой) ожидаемой доходности криптовалют часто можно услышать возражение, что, по мере того как криптовалюты будут становиться всё более общепринятым средством расчёта, их стоимость (из-за ограниченности предложения) будет расти. Эта идея представляет собой экономический оксюморон, даже если забыть об <em>огромном</em> и постоянно растущем количестве новых криптовалют (на одном только блокчейне эфира, например, разных криптовалют-токенов запущено уже почти <a href="https://etherscan.io/tokens">триста тысяч</a>). Если стоимость актива растёт, то он в дефиците, но дефицитный актив не может использоваться как средство расчёта, потому что его недостаточно для расчётов (иначе не было бы дефицита), плюс экономические агенты обычно не склонны просто так расставаться с растущими в цене активами. Чтобы какая-то криптовалюта служила средством расчётов и одновременно росла в цене, необходимо <em>законодательно обязать</em> всех экономических агентов осуществлять расчёты исключительно и только в этой криптовалюте, но даже и в этом случае они очень быстро съезжают на векселя-взаимозачёты-бартер, потому что рассчитываться дефицитным активом невозможно (Великая Депрессия и наше начало 2000-х тому примером).</p>
 <p>На аргумент о волатильности как препятствии для влючения в портфель можно было бы возразить, что по мере признания криптовалют она будет снижаться. Однако на данный момент снижения волатильности биткойна со временем замечено не было. Для снижения волатильности всё-таки требуется наличие механизмов внешнего управления курсом/эмиссией, что в корне противоречит идеологии большинства современных криптовалют.</p>
 <p>Таким образом, криптовалюты остаются исключительно спекулятивным активом, не дающем ни хотя бы нулевой реальной доходности, ни диверсификации (понимаемой как снижение риска портфеля, а не простое набивание его активами).</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/crypto&title=Криптовалюты&description=Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/crypto" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -120,25 +118,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/crypto" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/instruments/stocks"> &lt;&lt; Акции </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/stocks"> &lt;&lt; Акции </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
