--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Банковские счета, карты и вклады</h1>
-            <div class="meta">
-                    <p class="description">Риски и доходность банковских вкладов</p>
-                    <p> Обновлено: <time>2020-01-04</time> </p>
+<article>
+    <header>
+        <h1>Банковские счета, карты и вклады</h1>
+        <div class="meta">
+                <p class="description">Риски и доходность банковских вкладов</p>
+                <p> Обновлено: <time>2020-01-04</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Подробно нюансы работы с банковскими счетами и вкладами описаны <a href="/literacy/deposits">в отдельной статье</a>. Здесь рассмотрим их специфику именно как инструмента для сбережений.</p>
+    <div class="content">
+        <p>Подробно нюансы работы с банковскими счетами и вкладами описаны <a href="/literacy/deposits">в отдельной статье</a>. Здесь рассмотрим их специфику именно как инструмента для сбережений.</p>
 <p>Деньги на банковских счетах, как и наличные, доступны мгновенно но, в отличие от них, обесцениваются медленнее, как правило, — из-за начисляемых на остаток процентов. Для вкладов сроком от года до трёх этот процент как правило примерно равен инфляции. В качестве грубого ориентира по реальной скорости обесценения денег можно взять ключевую ставку ЦБ: цены в среднем растут именно с этой скоростью, а отличие от неё индекса потребительских цен преимущественно объясняется изменением структуры потребления и налогов.</p>
 <p>Основные финансовые риски вкладов.</p>
 <ol>
@@ -80,9 +78,9 @@
 <p>Кризисные явления в экономике часто заставляют даже весьма надёжные банки предлагать доходности значительно выше ожидаемой инфляции. В этом случае целесообразно открывать долгосрочные пополняемые вклады, чтобы зафиксировать привлекательную ставку, и переносить туда часть денег из более агрессивных инструментов.</p>
 <p>После введения страхования вкладов стало модным открывать вклады в мусорных банках, предлагающих ставки заметно выше рыночных. Дескать, АСВ всё равно возместит и вложенные деньги, и проценты. По факту, это поощрение мошенников к ограблению налогоплательщиков. Взносы в АСВ — это наши с вами недополученные проценты со вкладов, и наши налоги, когда в АСВ деньги заканчиваются. Практика АСВ возмещать начисленные проценты по вкладам должна быть прекращена (или, по крайней мере, они должны возмещаться в размере не более 2/3 ключевой ставки).</p>
 <p><a href="https://www.banki.ru/products/deposits/">Поиск вкладов</a> (всегда внимательно читайте условия вклада на сайте банка), оценка надёжности банков: <a href="http://kuap.ru/">Куап</a>, <a href="http://www.analizbankov.ru/">Анализ банков</a>.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/deposits2&title=Банковские счета, карты и вклады&description=Риски и доходность банковских вкладов" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/deposits2" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -90,25 +88,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/deposits2" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/instruments/cash"> &lt;&lt; Наличные деньги </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/instruments/bonds"> Облигации &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/cash"> &lt;&lt; Наличные деньги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/bonds"> Облигации &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
