--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Золото</h1>
-            <div class="meta">
-                    <p class="description">Виды, специфика, риски и доходность вложений в золото.</p>
-                    <p> Обновлено: <time>2020-01-05</time> </p>
+<article>
+    <header>
+        <h1>Золото</h1>
+        <div class="meta">
+                <p class="description">Виды, специфика, риски и доходность вложений в золото.</p>
+                <p> Обновлено: <time>2020-01-05</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
+    <div class="content">
+        <p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
 <ul>
 <li>потребление — 330 тонн/год и снижается,</li>
 <li>добыча — 3300 тонн/год (да, в 10 раз больше потребления) и растёт,</li>
@@ -87,9 +85,9 @@
 <li>Акции золотодобытчиков. Часто называются в качестве альтернативы, которая и инвестиция в золото, и дивиденды приносит. На российском рынке такой возможности нет, т.к. у нас их всего два и невозможно диверсифицировать операционные риски этих компаний. На зарубежном рынке можно приобрести ETF на мировую золотодобычу, чья доходность хорошо повторяет «золото + дивиденды».</li>
 </ol>
 <p>Учитывая колоссальное перепроизводство золота, я рассчитываю, что в перспективе оно должно обесцениться в десятки раз и не держу его ни в каком виде. Желающим диверсификации в этом направлении я рекомендую рассмотреть ETF на корзины драгоценных металлов и/или биржевых товаров в целом, но на российском рынке их нет.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/gold&title=Золото&description=Виды, специфика, риски и доходность вложений в золото." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -97,25 +95,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
