--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Недвижимость</h1>
-            <div class="meta">
-                    <p class="description">Вложения в недвижимость — какова реальная доходность и риски.</p>
-                    <p> Обновлено: <time>2020-04-20</time> </p>
+<article>
+    <header>
+        <h1>Недвижимость</h1>
+        <div class="meta">
+                <p class="description">Вложения в недвижимость — какова реальная доходность и риски.</p>
+                <p> Обновлено: <time>2020-04-20</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <div class="toc">
+    <div class="content">
+        <div class="toc">
 <ul>
 <li><a href="#_1">Арендная жилая недвижимость</a></li>
 <li><a href="#_2">Коммерческая недвижимость</a></li>
@@ -117,9 +115,9 @@
 <p>Но, опять же, в России таких нет, нужно выходить на зарубежного брокера.</p>
 <p>Если вас привлекает какой-то отдельный сегмент, можно купить долю в недвижимости под управлением конкретной УК — REIT. Но в этом случае вы подписываетесь под операционные риски данной конкретной УК, которые сопоставимы с рисками отдельного объекта недвижимости (хотя в случае REIT ваша ожидаемая доходность будет всё-таки выше — из-за того, что рынок оценивает и включает эти риски в стоимость пая, что проблематично на неликвидном рынке физической недвижимости), поэтому я бы всё-таки рекомендовал ETF — фонды из множества REIT'ов.</p>
 <p>Однако, есть исследование, что <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2965146">динамика фонда REITов представима как портфель из 66% недооценённых компаний малой капитализации + 34% корпоративных облигаций</a>, причём такой портфель доходнее. Т.е. если в вашем портфеле уже есть и то, и другое, то дополнительное добавление в него фондов на недвижимость, скорее всего, практически не уменьшит риски, но заметно снизит ожидаемую доходность.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/realty&title=Недвижимость&description=Вложения в недвижимость — какова реальная доходность и риски." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -127,25 +125,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/instruments/gold"> &lt;&lt; Золото </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/instruments/stocks"> Акции &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/gold"> &lt;&lt; Золото </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/stocks"> Акции &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
