--- a/literacy/instruments/stocks.html
+++ b/literacy/instruments/stocks.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Акции</h1>
-            <div class="meta">
-                    <p class="description">Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки.</p>
-                    <p> Обновлено: <time>2020-05-07</time> </p>
+<article>
+    <header>
+        <h1>Акции</h1>
+        <div class="meta">
+                <p class="description">Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки.</p>
+                <p> Обновлено: <time>2020-05-07</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <div class="toc">
+    <div class="content">
+        <div class="toc">
 <ul>
 <li><a href="#_1">Что такое акции</a></li>
 <li><a href="#_2">Виды акций</a></li>
@@ -263,9 +261,9 @@
 </tbody>
 </table>
 <p>Исходя из этого принимается, что доходность диверсифицированного портфеля из индексов на акции разных стран будет составлять приблизительно 5%г выше инфляции. При этом, несмотря на диверсификацию, просадка такого портфеля может составлять до 80%, а время восстановления капитала после просадки — более 10 лет.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/stocks&title=Акции&description=Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/stocks" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -273,25 +271,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/stocks" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/instruments/realty"> &lt;&lt; Недвижимость </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/instruments/crypto"> Криптовалюты &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/realty"> &lt;&lt; Недвижимость </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/crypto"> Криптовалюты &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
