--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -39,23 +39,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -64,20 +64,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Введение</h1>
-            <div class="meta">
-                    <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                    <p> Обновлено: <time>2019-11-19</time> </p>
+<article>
+    <header>
+        <h1>Введение</h1>
+        <div class="meta">
+                <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
+                <p> Обновлено: <time>2019-11-19</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Пишу я это всё, в общем-то, для своего ближайшего окружения — людей 20–35 лет от роду (у которых ещё есть время вывести свою финансовую жизнь на дорогу в сторону действительного благополучия, а не просто едва проскользнуть мимо откровенной нищеты) — взирая на печальное состояние умов в этой области, несмотря на проснувшийся живой интерес к теме. Не знаю, чему это печальное состояние приписать. Семидесяти годам государственного рабовладения, за которые в обществе сформировалась (и передаётся из поколения в поколение) идея, что надо успеть урвать любой кусок пока не отобрали, а в старости рабовладелец будет содержать в благодарность за долгую беспорочную службу?</p>
+    <div class="content">
+        <p>Пишу я это всё, в общем-то, для своего ближайшего окружения — людей 20–35 лет от роду (у которых ещё есть время вывести свою финансовую жизнь на дорогу в сторону действительного благополучия, а не просто едва проскользнуть мимо откровенной нищеты) — взирая на печальное состояние умов в этой области, несмотря на проснувшийся живой интерес к теме. Не знаю, чему это печальное состояние приписать. Семидесяти годам государственного рабовладения, за которые в обществе сформировалась (и передаётся из поколения в поколение) идея, что надо успеть урвать любой кусок пока не отобрали, а в старости рабовладелец будет содержать в благодарность за долгую беспорочную службу?</p>
 <p>Рабовладельца того уже 30 лет как нет, но подрастает уже второе поколение неприкаянных рабов. Да, свой кусок в расцвете лет вы, положим, урвёте. А потом? Кто будет вас в старости содержать за «долгую беспорочную службу»? Рабовладельца-то нет (если, конечно, вы не запродались и не отслужили до немощных лет какому-нибудь Газпрому или самому Левиафану непосредственно, у них есть свои частные пенсионные программы), и никому вы не интересны кроме самих себя.</p>
 <p>Дети? Ну смотрите. Едва ли разумно предполагать, что они будут зарабатывать намного больше вас. Скорее, чуть меньше: ибо роботизация, автоматизация и вытекающая из этого безработица. И будет их у вас хорошо если двое, и хорошо если в добром согласии с ними всю жизнь проживёте. Вот вы с женой привыкли жить на всю катушку (т.е. на всю зарплату), дети тоже может успеют привыкнуть до вашей пенсии. А потом — государственной подачки вам, скорее, только на лечение-лекарства хватит, а на привычную жизнь-то где взять? Отобрать <em>всю</em> з/п у детей (вы-то на столько же жить привыкли)? Не вариант. Заставить их поделиться половиной? Что они на это скажут? «Охренели, предки? Нам сейчас на хлебе экономить, потому что вы в своё время не думали ни о чём?» Ну, на хлебушек-то подкинут, а больше у вас ни на что не останется: им самим жить надо, своих детей растить (которые потом скажут так же, потому что традиции обращения с деньгами — они передаются). В общем, если так рассчитываете, то лучше приготовьтесь к очень жёсткой посадке из потребительского рая в ад нищеты.</p>
 <p>Выдавили из себя по капле раба и думаете, что заведёте бизнес? Табачную лавочку-свечной заводик? Ага. Только в первые три года своего существования закрывается 95% бизнесов, а 95% оставшихся — это не бизнес, это <em>самозанятость</em>. И заканчивается она вместе с силами своего основателя. Т.е. перестанет приносить вам доход ровно тогда, когда он больше всего будет нужен.</p>
@@ -167,9 +165,9 @@
 <p>По умолчанию здесь установлена <em>норма сбережений</em> в 20% — то, что обычно рекомендуют в книгах и статьях по финансовой грамотности. С такой нормой вы, начав лет в 20, выйдете на собственную пенсию в аккурат к 60 годам. Но посмотрите, что стоит вам увеличить эту норму на 10%? Допустим, ваш доход 60Кр в месяц и 6Кр (200р в день) вы тратите на обеды в кафе, или такси до работы и обратно, или просто на утреннюю бодрящую чашку кофе по дороге. Как раз 10%. Эти 10% обходятся вам в <strong>семь</strong> лишних лет работы! Если вы недополучаете в год всего лишь 5% к своим расходам процентами и кэшбэком, из-за неумения пользоваться банковскими сервисами, — это ещё <strong>три</strong> года. А уйти на заслуженный отдых в 60 или в 50 лет — это очень большая разница.</p>
 <p>А если вы научитесь комфортно жить на <strong>треть</strong> своих трудовых доходов, то всего через 8 лет уже сможете послать работодателя к чертям и заниматься тем, что интересно лично вам (разумеется, не обязательно забесплатно, а может в скорой перспективе и за бо́льшие деньги, чем получали раньше — только это будет вас уже мало заботить; настоящая пенсия она такая должна быть — беззаботная).</p>
 <p>А далее я приглашаю вас перестраивать мозги и учиться благоустраивать свои финансы к скорейшему переходу в это беззаботное состояние.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/intro&title=Введение&description=Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -177,25 +175,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
