--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Формирование резервов</h1>
-            <div class="meta">
-                    <p class="description">Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех.</p>
-                    <p> Обновлено: <time>2019-11-19</time> </p>
+<article>
+    <header>
+        <h1>Формирование резервов</h1>
+        <div class="meta">
+                <p class="description">Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех.</p>
+                <p> Обновлено: <time>2019-11-19</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Весь разговор о личных финансах — это разговор вокруг правильного формирования и расходования <em>резервов</em>. Они выполняют не только очевидную роль стабилизатора финансов, но и сбережения, планирования и даже экономии (один из важнейших способов экономить — приобретать нужное не в последний момент крайней необходимости, по имеющимся на этот момент не самым низким ценам и возможно даже в кредит, а в благоприятный момент на зарезервированные деньги).
+    <div class="content">
+        <p>Весь разговор о личных финансах — это разговор вокруг правильного формирования и расходования <em>резервов</em>. Они выполняют не только очевидную роль стабилизатора финансов, но и сбережения, планирования и даже экономии (один из важнейших способов экономить — приобретать нужное не в последний момент крайней необходимости, по имеющимся на этот момент не самым низким ценам и возможно даже в кредит, а в благоприятный момент на зарезервированные деньги).
 Тем смешнее, что руководства к личным финансам обычно говорят лишь о <em>«подушке безопасности»</em> — резерве в размере примерно полугодовых текущих расходов на случай потери работы, чтобы можно было в более-менее комфортной обстановке искать новую. А для всего остально предлагают другие термины и другие методы.</p>
 <p>Я предлагаю пользоваться единым универсальным подходом с точки зрения работы с резервами.</p>
 <h2 id="_1">Резервы предстоящих расходов</h2>
@@ -108,9 +106,9 @@
 <p>Отдельно надо сказать о программах <em>накопительного и инвестиционного страхования жизни</em>, которые хотя и очень активно продвигаются именно именно для пенсионного обеспечения, не решают задач ни накопления, ни инвестиций, ни страхования.
 Почему. Во-первых, за страхование рисков вы всё равно заплатите, причём, скорее всего, дороже обычного рыночного тарифа: т.к. вы не можете ни настроить его параметры, ни увидеть отдельной строкой его стоимость, чтобы сравнить с другими компаниями. Во-вторых, вы заплатите комиссию страховому агенту (такие полисы обычно любят навязывать банки и «финансовые советники»), а это, <a href="http://www.cbr.ru/content/document/file/47303/review_insure_18q1.pdf">по данным ЦБ РФ</a> — больше 20% от взносов. В-третьих, из-за необходимости вернуть строго установленную сумму в указанный срок страховые компании очень сильно ограниченны в выборе инвестиционных инструментов и итоговая доходность едва ли будет превышать инфляцию (но именно доходность сверх инфляции и позволяет за обозримые сроки создать адекватный пенсионный резерв). Ко всему прочему, вам придётся заплатить крупный штраф, если вы потребуете выплатить накопленные деньги не дождавшись прописанного в договоре события. И вы подставляетесь под риск банкротства страховой (который за время действия программы — обычно более пяти лет — довольно вероятен): страхования их обязательств по аналогии с банками у нас нет (кроме ОСАГО), да и сами уплаченные вами по программе страхования деньги безусловным обязательством страховой не являются (в отличие от банковского депозита).</p>
 <p>Эти программы используются обычно для сокрытия денег от судебных приставов в случае имущественных споров и тайной их передачи третьим лицам (именно потому, что уплаченная вами страховая премия — это не ваши деньги и не обязательство страховой перед вами, а ваши траты и доход страховой; обязательство же по выплате у страховой наступит только при страховом случае и только перед теми, кто указан в договоре страхования).</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/reserves&title=Формирование резервов&description=Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -118,25 +116,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/notaboutmoney"> &lt;&lt; Бережливость — это не про деньги </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/returns"> Анатомия доходности &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/notaboutmoney"> &lt;&lt; Бережливость — это не про деньги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/returns"> Анатомия доходности &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
