--- a/literacy/returns/index.html
+++ b/literacy/returns/index.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Анатомия доходности</h1>
-            <div class="meta">
-                    <p class="description">Общий взгляд на механику финансовых инструментов: рыночная цена, доходность, риски, ликвидность.</p>
-                    <p> Обновлено: <time>2020-04-16</time> </p>
+<article>
+    <header>
+        <h1>Анатомия доходности</h1>
+        <div class="meta">
+                <p class="description">Общий взгляд на механику финансовых инструментов: рыночная цена, доходность, риски, ликвидность.</p>
+                <p> Обновлено: <time>2020-04-16</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <div class="toc">
+    <div class="content">
+        <div class="toc">
 <ul>
 <li><a href="#_1">Доходность</a></li>
 <li><a href="#_2">Неоднозначность ожидаемой доходности</a></li>
@@ -122,9 +120,9 @@
 <p>Однако рыночная цена хорошо определена только для ликвидных инструментов, за которыми следят множество аналитиков. В неликвидных ситуация другая. Крупному капиталу они неинтересны, поэтому сделки совершаются редко, а текущие цены продавцов и покупателей скорее отражают их собственную ситуацию, чем рыночную оценку ожидаемой доходности. Спред также очень велик. Профессионал здесь может найти очень привлекательные предложения, непрофессионал — скорее очень сильно переплатит за то, от чего потом не сможет избавиться без больших убытков (таких предложений всё-таки подавляющее большинство).</p>
 <p>Другая особенность неликвидных инструментов — в случае завышенной цены (= отрицательной ожидаемой доходности) их нельзя взять взаймы и продать, получив положительную доходность и, одновременно, сбив цену. Поэтому многие инструменты даже на бирже продаются под отрицательную ожидаемую доходность. Часто с помощью маркет-мейкеров: участников рынка, по договору с эмитентом ценной бумаги, поддерживающих заданную ширину спреда между очередями на покупку и продажу бумаги. Маркет-мейкер зарабатывает на ширине спреда, эмитент зарабатывает на выпуске бумаг по завышенной цене. Объём обязательств маркет-мейкера ограничен, и в случае чего из бумаги успеют выйти только самые шустрые. Формально ликвидность есть, и спред может быть достаточно узкий, но они обеспечиваются не рынком, а самим эмитентом в его интересах.</p>
 <p>Несмотря на всё это, биржа остаётся достаточно прозрачным механизмом. Можно оценить и величину спреда, и объём сделок, и количество участников рынка в очередях на покупку/продажу... и исходя из этого делать хотя бы приблизительные выводы о справедливости предлагаемой цены. Если вы берётесь покупать/продавать <em>по объявлениям</em> или, хуже того, <em>по рекламе</em> — вы однозначно должны уметь считать ожидаемую доходность лучше, чем ваш контрагент.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/returns&title=Анатомия доходности&description=Общий взгляд на механику финансовых инструментов: рыночная цена, доходность, риски, ликвидность." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -132,25 +130,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/literacy/reserves"> &lt;&lt; Формирование резервов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
