--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Кто я и как дошёл до жизни такой</h1>
-            <div class="meta">
-                    <p class="description">Что побудило меня заниматься «инвестициями» и почему именно таким образом</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+<article>
+    <header>
+        <h1>Кто я и как дошёл до жизни такой</h1>
+        <div class="meta">
+                <p class="description">Что побудило меня заниматься «инвестициями» и почему именно таким образом</p>
+                <p> Обновлено: <time>2019-12-29</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Сейчас я позиционирую себя инженером информационных систем и кандидатом физ.-мат. наук. Инженером — по первому образованию и основному роду деятельности, а кандидатом — ну так исторически сложилось, что защитил диссер в области моделирования горения твёрдых ракетных топлив (в Ижевске вообще, плюнь в толпу — зацепишь ракетчика). Отсюда склонность к рациональности, систематичности, сырым данным и математическим моделям.</p>
+    <div class="content">
+        <p>Сейчас я позиционирую себя инженером информационных систем и кандидатом физ.-мат. наук. Инженером — по первому образованию и основному роду деятельности, а кандидатом — ну так исторически сложилось, что защитил диссер в области моделирования горения твёрдых ракетных топлив (в Ижевске вообще, плюнь в толпу — зацепишь ракетчика). Отсюда склонность к рациональности, систематичности, сырым данным и математическим моделям.</p>
 <p>Ни финансового образования, ни опыта работы в этой сфере не имею, хотя экономикой увлекался. Так что имейте в виду, что всё на этом сайте написанное — рассуждения дилетанта.</p>
 <p>Вырос в небогатой семье, привык жить скромно, поэтому деньги копились. К 2014-му году накопилось на квартиру. Ещё с ранней весны в воздухе носилось ощущение, все вокруг говорили, что сейчас всё резко станет плохо и надо сбережения как-то спасать, но понимания что и как делать — не было. В итоге я так и купил квартиру, «на панике», оставшись не только без денег, но и с кредитом (хотя небольшим), и решил больше таких ситуаций не допускать.</p>
 <p>«Триггернула» меня в «финансовую осознанность» присланная другом ссылка на <a href="http://earlyretirementextreme.com/">Early Retirement Extreme</a>, блог одного из отцов-основателей движения «за ранний выход на пенсию, своими силами», который «даст вам инструменты для достижения финансовой независимости за 5 лет». Из всех разложенных там инструментов мне не хватало только идеологии и представлений о современной финансовой системе и рынках. Признаюсь, я был настолько дремуч, что не понимал словосочетания «реквизиты счёта банковской карты».</p>
@@ -73,9 +71,9 @@
 <p>Через год закрыл кредит и открыл брокерский счёт (самый дешёвый, в Промсвязьбанке, он и сейчас остаётся основным, хотя, после кратного снижения комиссий, я теперь всем рекомендую Сбер). В начале года выкладываю в блоге динамику (вот <a href="/blog/2019-01-02">к явнварю 2019-го</a>).</p>
 <p>К 2018-му тема инвестиций стала совсем горячей. Семинары-вебинары-лекции стали проводить все кому ни лень, и часто без должной подготовки. И почти все, очевидно, — с целью заработать. Продвигают или свои услуги по финансовому консультированию и составлению «личных финансовых планов» (что довольно бессмысленно), или финансовые продукты с грабительскими условиями или комиссиями.</p>
 <p>Тут мне захотелось донести свою, основанную на личном опыте как сбережений, так и анализа данных и литературы, позицию. Тоже не обошлось без своего триггера, которым стала фраза представителя ЦБ на одной из таких лекций: «можно ещё в доверительное управление деньги передать, и тоже получить хорошую доходность» (на самом деле, конечно, получить можно только убытки: <a href="https://seekingalpha.com/article/3971167-target-hedge-fund-allocation-zero">статья со статистикой за последние 10 лет</a>).</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/aboutme&title=Кто я и как дошёл до жизни такой&description=Что побудило меня заниматься «инвестициями» и почему именно таким образом" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -83,25 +81,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/piketti2"> &lt;&lt; Социальное неравенство и налоги </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/system"> Как организованы мои финансы &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/piketti2"> &lt;&lt; Социальное неравенство и налоги </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/system"> Как организованы мои финансы &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
