--- a/notes/bonds_in_portfolio/index.html
+++ b/notes/bonds_in_portfolio/index.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Облигации в инвестиционном портфеле</h1>
-            <div class="meta">
-                    <p class="description">Рассматриваем различные роли облигаций в инвестиционном портфеле. Для каждой роли — свои облигации.</p>
-                    <p> Обновлено: <time>2020-02-14</time> </p>
+<article>
+    <header>
+        <h1>Облигации в инвестиционном портфеле</h1>
+        <div class="meta">
+                <p class="description">Рассматриваем различные роли облигаций в инвестиционном портфеле. Для каждой роли — свои облигации.</p>
+                <p> Обновлено: <time>2020-02-14</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Облигации в инвестиционном портфеле могут играть множество ролей:</p>
+    <div class="content">
+        <p>Облигации в инвестиционном портфеле могут играть множество ролей:</p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Для накопления на определённую финансовую цель</a></li>
@@ -107,9 +105,9 @@
 <p>За несколько лет (5–10) до предполагаемого «выхода на пенсию» выделяем в портфеле долю, эквивалентную планируемым годовым расходам, и наполняем её облигациями, которые будут погашены к моменту выхода. В следующий год — приобретаем облигации на последующий год пенсии. Таким образом, к нашей пенсии мы будем иметь «лестницу» из выпусков облигаций, которые гасятся в последовательные годы. Каждый год добавляем следующий дальний выпуск.</p>
 <p>Я не случайно сказал о <em>доле</em>, эквивалентной годовым расходам, а не о <em>сумме</em> годовых расходов. Если в момент планирования наши предполагаемые изъятия из портфеля составляют 300Кр/год, а сам портфель — 3Мр, то мы определяем резервировать на каждый год пенсии 10% портфеля max 300Кр. Это позволяет ориентироваться в относительной цене акций: когда рынок падает мы приобретаем меньше облигаций, а когда растёт — навёрстываем недокупленное в годы просадок до желаемой величины расходов. Хотя иногда нам придётся довольствоваться меньшими суммами, если просадка оказывается длинной и глубокой, но мы хотя бы будем точно знать, сколько мы можем потратить, чтобы не остаться скоропостижно без капитала.</p>
 <p>О том, как спланировать и рассчитать расходование пенсионного капитала будет отдельная статья.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/bonds_in_portfolio&title=Облигации в инвестиционном портфеле&description=Рассматриваем различные роли облигаций в инвестиционном портфеле. Для каждой роли — свои облигации." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -117,25 +115,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/inflation"> &lt;&lt; Инфляция </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/markettiming"> Выбор времени для покупки акций &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/inflation"> &lt;&lt; Инфляция </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/markettiming"> Выбор времени для покупки акций &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
