--- a/notes/capital.html
+++ b/notes/capital.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Зачем нужен капитал</h1>
-            <div class="meta">
-                    <p class="description">Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+<article>
+    <header>
+        <h1>Зачем нужен капитал</h1>
+        <div class="meta">
+                <p class="description">Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы.</p>
+                <p> Обновлено: <time>2019-12-29</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p><a href="/literacy/notaboutmoney">Обзор видов капитала</a> я уже сделал, оговорившись, что финансовый капитал не единственный и даже не обязательный. Однако он универсален, понятен и в наибольшей степени контролируется своим обладателем. Поэтому речь о нём.</p>
+    <div class="content">
+        <p><a href="/literacy/notaboutmoney">Обзор видов капитала</a> я уже сделал, оговорившись, что финансовый капитал не единственный и даже не обязательный. Однако он универсален, понятен и в наибольшей степени контролируется своим обладателем. Поэтому речь о нём.</p>
 <ol>
 <li>
 <p>Капитал — это отложенное потребление. В далёком (а для кого-то и недалёком) будущем наши способности зарабатывать неизбежно закончатся, а возможности окружения нас обеспечивать — в лучшем случае нами не контролируются. И не надо мне про детей: получать они будут столько же, а готовы делиться, допустим, 10% заработка. Задача: сколько нужно детей, чтобы они обеспечили вам с женой привычный уровень расходов?</p>
@@ -79,9 +77,9 @@
 </li>
 </ol>
 <p>Поэтому меня раздражают рассуждения вроде «нет смысла сегодня откладывать рубль, если завтра получишь десять», или «нет смысла сберегать, если впереди всемирная катастрофа или всеобщее благоденствие», или «можно уехать в деревню — там государственной пенсии хватит». Они смотрят на капитал только как на отложенное потребление, хотя это не единственная и, может быть, даже не самая важная его роль.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/capital&title=Зачем нужен капитал&description=Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -89,25 +87,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/recklessness"> Безответственное отношение к деньгам &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/recklessness"> Безответственное отношение к деньгам &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
