--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Математика диверсификации-2: доходность и риск</h1>
-            <div class="meta">
-                    <p class="description">Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</p>
-                    <p> Обновлено: <time>2020-04-23</time> </p>
+<article>
+    <header>
+        <h1>Математика диверсификации-2: доходность и риск</h1>
+        <div class="meta">
+                <p class="description">Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</p>
+                <p> Обновлено: <time>2020-04-23</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>От абстрактного рынка перейдём к реальному. Как обычно, к американскому: по нему просто больше всего данных и к этим данным меньше всего вопросов (да и сам рынок повидал практически всё). В качестве исходных данных возьмём <a href="http://www.econ.yale.edu/~shiller/data/ie_data.xls">таблицы Шиллера</a>, и пересчитаем в <a href="/notes/diversification_math2/stats.xls">индексы полной реальной доходности с 1928 года</a>.</p>
+    <div class="content">
+        <p>От абстрактного рынка перейдём к реальному. Как обычно, к американскому: по нему просто больше всего данных и к этим данным меньше всего вопросов (да и сам рынок повидал практически всё). В качестве исходных данных возьмём <a href="http://www.econ.yale.edu/~shiller/data/ie_data.xls">таблицы Шиллера</a>, и пересчитаем в <a href="/notes/diversification_math2/stats.xls">индексы полной реальной доходности с 1928 года</a>.</p>
 <p>Посмотрим как распределены реальные доходности базовых инструментов на всех возможных десятилетних периодах (с графиками такого типа мы уже познакомились в <a href="/notes/diversification_math">предыдущей статье</a>). Графики будут неровные, т.к. это реальные данные, а не идеальная модель. Ожидаемая доходность лежит точно посредине графика.</p>
 <p><img src=/notes/diversification_math2/yield_distr.svg style="width: 100%; height: 50wv" /></p>
 <p>В финансовой теории под <em>риском</em> инструмента обычно понимают какую-либо меру ширины разброса его итоговой доходности за рассматриваемый период (как правило, <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D0%B5%D0%BA%D0%B2%D0%B0%D0%B4%D1%80%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BE%D1%82%D0%BA%D0%BB%D0%BE%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5">стандартное отклонение</a>). <strong>Типичное заблуждение противников портфельной теории</strong> — что в ней за риск принимается волатильность инструмента (т.е. размах колебаний его цены во времени). НЕТ. За риск принимается мера неопределённости результата инвестиций.</p>
@@ -92,9 +90,9 @@
 <p>Вероятность получить полный провал на портфеле, целиком состоящем из акций, в первые годы весьма велика и первые 10 лет только растёт, однако с дальнейшим увеличением горизонта инвестиций снижается. Важно понимать, что этот график смотрит «назад», а не «вперёд». Т.е. по итогам каждого завершившегося года у вас может быть просадка 45% относительно базового сценария (5%г реальной доходности), по итогам последних 10 лет — 65%, а вот по итогам 30 лет — едва ли 30%. Облигации, очевидно, требуемую реальную доходность дать не могут, но за несколько лет сильно не обесценятся, а с увеличением горизонта риск стремится к 100%.</p>
 <p>А вот сбалансированный портфель 60/40 стабилизируется в районе долгосрочной доходности около 2,5%г (если пересчитать в годовую доходность с учётом итоговой потери капитала), при которой на 30 годах даёт просадку в размере капитала не более 30% (как в лучшую, так и в худшую стороны). Но при этом, это уже та доходность, на которую можно при планировании рассчитывать. Для сравнения, для акций такая «надёжная» доходность на горизонте 30 лет — 4%г (на 15 годах падает до 2,4%г, а на пяти — до 1,9%г); для облигаций — 1,3, 1,8 и 2,9%г для 30, 15 и 5 лет соответственно.</p>
 <p>Ссылки на исходные данные в начале статьи, <a href="/notes/diversification_math2/risk.py">код для расчёта и построения графиков</a>.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math2&title=Математика диверсификации-2: доходность и риск&description=Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -102,25 +100,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/diversification_math"> &lt;&lt; Математика диверсификации: портфельный эффект и ребалансировка между акциями </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/mpt"> (Не)Математика диверсификации-3: современная теория портфеля &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/diversification_math"> &lt;&lt; Математика диверсификации: портфельный эффект и ребалансировка между акциями </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/mpt"> (Не)Математика диверсификации-3: современная теория портфеля &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
