--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Личный финансовый план — не нужен</h1>
-            <div class="meta">
-                    <p class="description">Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+<article>
+    <header>
+        <h1>Личный финансовый план — не нужен</h1>
+        <div class="meta">
+                <p class="description">Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы.</p>
+                <p> Обновлено: <time>2019-12-29</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Любимый «продукт» всех финансовых советников. Большого ума для составления не надо, а денег можно взять много. За «сопровождение» в том числе.</p>
+    <div class="content">
+        <p>Любимый «продукт» всех финансовых советников. Большого ума для составления не надо, а денег можно взять много. За «сопровождение» в том числе.</p>
 <p>Практической пользы в этом нет никакой. Польза — в <a href="/literacy/reserves">разнесении своих денег по целевым счетам</a>.</p>
 <ol>
 <li>Заведите отдельные счета на обязательные, текущие и плановые расходы. Просто отдельный накопительный счёт в вашем банке, в названии/комментарии укажите что за счёт и сколько там должно быть денег.</li>
@@ -82,9 +80,9 @@
 <li>Система динамична и мгновенно учитывает изменение ваших приоритетов (на какой цели больше денег — та и в приоритете) и общую финансовую ситуацию. В случае изменений не надо ничего переделывать и перепланировать — вы просто перераспределяете деньги между счетами в обычном режиме. А как это влияет на сроки достижения целей и необходимые суммы отчислений — оцениваете на <a href="/calculators/compounding">калькуляторах</a>.</li>
 </ol>
 <p>Ещё одно бесполезное упражнение от советников — оценка своего финансового положения, которое заключается в выписывании рыночной стоимости всех имуществ и объёма всех долгов. Я даже не думаю, что таким образом можно напугать человека, у которого ипотечная квартира и дорогая кредитная машина, а все доходы он проматывает. Он в курсе. Остальным это тем более незачем.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/finplan&title=Личный финансовый план — не нужен&description=Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -92,25 +90,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/recklessness"> &lt;&lt; Безответственное отношение к деньгам </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/lifeprofile"> Финансовый профиль жизни обычного человека и инвестора &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/recklessness"> &lt;&lt; Безответственное отношение к деньгам </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/lifeprofile"> Финансовый профиль жизни обычного человека и инвестора &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
