--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Инфляция</h1>
-            <div class="meta">
-                    <p class="description">Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно</p>
-                    <p> Обновлено: <time>2020-05-16</time> </p>
+<article>
+    <header>
+        <h1>Инфляция</h1>
+        <div class="meta">
+                <p class="description">Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно</p>
+                <p> Обновлено: <time>2020-05-16</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>«Инфля́ция (лат. inflatio «вздутие») — повышение общего уровня цен на товары и услуги на длительный срок.» — говорит нам <a href="https://ru.wikipedia.org/wiki/Инфляция">Википедия</a>.</p>
+    <div class="content">
+        <p>«Инфля́ция (лат. inflatio «вздутие») — повышение общего уровня цен на товары и услуги на длительный срок.» — говорит нам <a href="https://ru.wikipedia.org/wiki/Инфляция">Википедия</a>.</p>
 <p>Измеряют её, соответственно, сравнивая цены на товары и услуги в разные моменты времени. Разные наборы товаров и услуг определяют разные <em>индексы</em>. Наиболее часто используемый индекс — индекс потребительских цен (ИПЦ, <a href="https://www.fedstat.ru/indicator/33568">общий</a>, <a href="https://www.fedstat.ru/indicator/31074">по отдельным товарам и группам</a>). Его особенность в том, что он составляется по практически полному набору товаров и услуг (включая даже недвижимость и зарубежный отдых), причём веса при ценах соответствуют доле расходов на них у среднестатистического потребителя (<a href="https://www.fedstat.ru/indicator/31448">цены на товары и услуги</a>, <a href="https://www.fedstat.ru/indicator/37053">доли товаров и услуг в потребительской корзине</a>). Таким индексом практически невозможно манипулировать, он действительно отражает изменение расходов обычного потребителя (<a href="https://at6.livejournal.com/27831.html">пример</a>, у меня нет такой длинной истории, но результаты тоже примерно соответствуют). Именно такого рода индекс берут за ориентир по инфляции практически все центробанки. Однако этот способ формализации инфляции приводит к включению в неё такого широкого спектра факторов, что показатель теряет всякую информативность. Рассмотрим эти факторы.</p>
 <h2 id="_1">Составляющие инфляции</h2>
 <p><strong>Рост денежной массы.</strong> Из-за чрезмерной печати денег центробанком или агрессивного кредитования. Его обычно называют в качестве определяющего фактора инфляции (хотя и посредством разных механизмов, см. хотя бы ту же википедию). Однако у меня на сей счёт есть очень большие сомнения.</p>
@@ -111,9 +109,9 @@
 <p>Третья проблема, как я уже писал выше, — от структурной «инфляции», которая вовсе не инфляция, но может восприниматься как таковая ЦБ, из-за несовершенства средств измерения. Неверно интерпретировав сигнал от ИПЦ, центробанк может начать предпринимать действия, прямо ухудшающие работу экономики. К счастью, центробанки как правило осторожны и пристально следят за последствиями своих решений, поэтому неверная политика скорее всего будет быстро отменена. Хотя относительно европейского центробанка у меня в этом отношении есть некоторые сомнения, но ему приходится единой политикой регулировать чудовищно различные по своему состоянию экономики (за цену <a href="https://www.numbeo.com/cost-of-living/in/Podgorica">обеда в Черногории</a> во Франции <a href="https://www.numbeo.com/cost-of-living/in/Paris">едва чашку кофе нальют</a>), так что ему там всё равно должно быть виднее.</p>
 <p>Разделить все эти эффекты — практически невозможно, и ошибки (иногда фатальные) — неизбежны.</p>
 <p>Поэтому моя надежда на криптовалюты — в том, что абсолютная прозрачность транзакций и алгоритмизация эмиссии позволит построить точный автоматический регулятор наполнения деньгами различных секторов экономики, сделать экономический рост идеально ровным, а распределение богатства — рыночно-справедливым. К сожалению, криптовалютное сообщество настолько дремуче в экономическом плане, что упорно строит валюты по подобию золота, хотя катастрофические последствия отката на такую систему денежного обращения — вполне очевидны.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/inflation&title=Инфляция&description=Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -121,25 +119,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/mpt"> &lt;&lt; (Не)Математика диверсификации-3: современная теория портфеля </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/mpt"> &lt;&lt; (Не)Математика диверсификации-3: современная теория портфеля </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
