--- a/notes/market_to_gdp/index.html
+++ b/notes/market_to_gdp/index.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</h1>
-            <div class="meta">
-                    <p class="description">Каким образом связны ВВП страны и рынок её акций, имеет ли смысл взвешивать страны по ВВП в мировом индексе</p>
-                    <p> Обновлено: <time>2020-05-12</time> </p>
+<article>
+    <header>
+        <h1>Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</h1>
+        <div class="meta">
+                <p class="description">Каким образом связны ВВП страны и рынок её акций, имеет ли смысл взвешивать страны по ВВП в мировом индексе</p>
+                <p> Обновлено: <time>2020-05-12</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>По мотивам обсуждений в <a href="https://t.me/RationalAnswer_Chat">чате Павла Комаровского</a>.</p>
+    <div class="content">
+        <p>По мотивам обсуждений в <a href="https://t.me/RationalAnswer_Chat">чате Павла Комаровского</a>.</p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Общие представления</a></li>
@@ -128,9 +126,9 @@
 <p>Можно сказать, что Германия — «плохой» пример, но все «хорошие» примеры будут связаны с недооценкой рынков по фундаментальным показателям, которая никак не связана с долей этой страны в мировом ВВП.</p>
 <p>Разумеется, что для частного инвестора, который не может сколь-нибудь значимым образом двигать рынки, но хочет снизить влияние на свой портфель пузырей на локальных рынках, такое взвешивание может быть оправданным и даже удобным. Однако результаты сколь-нибудь крупного инвестиционного фонда, использующего эту стратегию, скорее всего, будут весьма удручающими. Возможно, именно поэтому, несмотря на довольно длительную историю взвешенных по ВВП индексов и их убедительного опережения взвешенных по капитализации, такие фонды остаются неизвестными.</p>
 <p>А для избегания локальных пузырей взвешивание на основе того же CAPE выглядит гораздо более обоснованным.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/market_to_gdp&title=Рост ВВП, прибыли компаний, капитализация и доходность рынка акций&description=Каким образом связны ВВП страны и рынок её акций, имеет ли смысл взвешивать страны по ВВП в мировом индексе" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/market_to_gdp" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -138,25 +136,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/market_to_gdp" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/markettiming"> &lt;&lt; Выбор времени для покупки акций </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/fairprice"> Справедливая цена &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/markettiming"> &lt;&lt; Выбор времени для покупки акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/fairprice"> Справедливая цена &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
