--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Откуда берётся рыночная цена и доходность акций</h1>
-            <div class="meta">
-                    <p class="description">Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля.</p>
-                    <p> Обновлено: <time>2020-04-16</time> </p>
+<article>
+    <header>
+        <h1>Откуда берётся рыночная цена и доходность акций</h1>
+        <div class="meta">
+                <p class="description">Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля.</p>
+                <p> Обновлено: <time>2020-04-16</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Много шуму в кругах наделала книга Александра Силаева <a href="https://www.alpinabook.ru/catalog/book-555670/">«Деньги без дураков»</a>, в которой автор со всех сторон пытается доказать, что «пассивного дохода на капитал нет». Отметились и <a href="https://fintraining.livejournal.com/1107457.html">Сергей Спирин</a>, и <a href="https://mobile.twitter.com/Rational_Answer/status/1163884047413760000">Павел Комаровский</a>, а Григорий Барщевский и вовсе <a href="https://gregbar.livejournal.com/895518.html">обрушился с разгромной критикой</a>. Аргументацию «противной стороны» — фундаментальных инвесторов ­— чеканно сформулировал <a href="https://forum.roundabout.ru/viewtopic.php?p=74135#p74135">Валуа Второй</a> (обсуждение на форуме тоже интересно почитать):</p>
+    <div class="content">
+        <p>Много шуму в кругах наделала книга Александра Силаева <a href="https://www.alpinabook.ru/catalog/book-555670/">«Деньги без дураков»</a>, в которой автор со всех сторон пытается доказать, что «пассивного дохода на капитал нет». Отметились и <a href="https://fintraining.livejournal.com/1107457.html">Сергей Спирин</a>, и <a href="https://mobile.twitter.com/Rational_Answer/status/1163884047413760000">Павел Комаровский</a>, а Григорий Барщевский и вовсе <a href="https://gregbar.livejournal.com/895518.html">обрушился с разгромной критикой</a>. Аргументацию «противной стороны» — фундаментальных инвесторов ­— чеканно сформулировал <a href="https://forum.roundabout.ru/viewtopic.php?p=74135#p74135">Валуа Второй</a> (обсуждение на форуме тоже интересно почитать):</p>
 <blockquote>
 <p>Я предлагаю мыслить примерно так: компании будут закладывать в цены товаров и услуг все издержки, которые примерно равны товарной инфляции + они будут закладывать некоторую норму прибыли. Следовательно прибыли компаний за ряд лет будут отбивать инфляцию с избытком. Темпу роста прибыли будет соответствовать динамика капитализации компаний. Следовательно акции компаний будут наиболее доходным инструментом, но и более волатильным. Это надо учитывать при формировании и управлении портфелем. Облигации будут давать меньшую доходность потому, что это долговое обязательство бизнеса, но ни кто в здравом уме не будет занимать под процент, который сожрёт всю потенциальную прибыль. Значит доход по облигациям будет являться только какой-то частью прибыли, и следовательно доходность облигаций будет ниже, но гарантированный купонный доход, и гарантированный срок гашения облигации делает этот инструмент менее рискованным и менее волатильным.</p>
 </blockquote>
@@ -96,9 +94,9 @@
 </li>
 </ol>
 <p>Итак. Несмотря на то, что некоторая (и, возможно, весьма значительная — я не представляю как это посчитать) часть прошлой доходности фондового рынка обусловлена факторами, которые уже не действуют, нынешним пассивным инвесторам ещё есть на чём получить свои 5%г реальной доходности. Во-первых, за счёт портфельного эффекта между классами и подклассами активов на более длинном временно́м горизонте чем в среднем по рынку. Во-вторых, за счёт взрывного роста компаний на новых рынках (как это и всегда было). А вот Global Market Portfolio, в котором все активы мира взвешены по их капитализации (т.е. портфель идеального силаевского пассивного инвестора, в точности соответствующего рынку капиталов) — таки да, скорее всего будет иметь доходность околонулевую.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/marketprice&title=Откуда берётся рыночная цена и доходность акций&description=Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -106,25 +104,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
