--- a/notes/markettiming/index.html
+++ b/notes/markettiming/index.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Выбор времени для покупки акций</h1>
-            <div class="meta">
-                    <p class="description">Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит.</p>
-                    <p> Обновлено: <time>2020-05-06</time> </p>
+<article>
+    <header>
+        <h1>Выбор времени для покупки акций</h1>
+        <div class="meta">
+                <p class="description">Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит.</p>
+                <p> Обновлено: <time>2020-05-06</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>По мотивам статьи <a href="https://ofdollarsanddata.com/why-market-timing-can-be-so-appealing/">Ника Маггиулли</a> (<a href="https://assetallocation.ru/why-market-timing-can-be-so-appealing/">перевод Сергея Спирина</a>).</p>
+    <div class="content">
+        <p>По мотивам статьи <a href="https://ofdollarsanddata.com/why-market-timing-can-be-so-appealing/">Ника Маггиулли</a> (<a href="https://assetallocation.ru/why-market-timing-can-be-so-appealing/">перевод Сергея Спирина</a>).</p>
 <!--
 Начну с общетеоретического замечания. Почему-то многим кажется, что расчёт динамики портфеля с довложениями нагляднее и даже корректнее. Это не так. Результаты такого расчёта очень сильно зависят от свободных параметров: соотношения размера начального капитала и размера довложений, динамики этого размера (фиксированный, индексация на инфляцию, индексация на предполагаемый рост з/п инвестора...), интервала между довложениями. А по мере роста портфеля довложения начинают играть всё меньшую и меньшую роль, и портфель начинает вести себя как портфель без довложений. То есть получается очень искажённая и нестабильная во времени динамика, которая не соответствует никакому реальному случаю. Автор исходной заметки тоже, по-видимому, не избежал этого заблуждения и получил искажённые результаты.
 
@@ -83,9 +81,9 @@
 <p><img src=/notes/markettiming/stocks_abs_outperf.svg style="width: 100%; height: 50wv" /></p>
 <p>В 20% случаев она отстаёт, и очень сильно отстаёт. Очень многие, попав в такой неудачный момент, могут не выдержать, сравнивая свои результаты с базовым сценарием, и просто зафиксировать убыток.</p>
 <p>В общем, не выбирайте время для покупки акций. Если есть деньги, которые вы можете скормить рынку, — скармливайте сразу. Даже ГосподьБог не может получить результат сильно лучше.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/markettiming&title=Выбор времени для покупки акций&description=Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/markettiming" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -93,25 +91,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/markettiming" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/bonds_in_portfolio"> &lt;&lt; Облигации в инвестиционном портфеле </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/bonds_in_portfolio"> &lt;&lt; Облигации в инвестиционном портфеле </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
