--- a/notes/mpt/index.html
+++ b/notes/mpt/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-04-21" />
-        <meta property="og:article:modified_time" content="2020-04-21" />
+        <meta property="og:article:modified_time" content="2020-06-07" />
 <meta property="og:title" content="(Не)Математика диверсификации-3: современная теория портфеля" />
 <meta property="og:url" content="https://onfin.github.io/notes/mpt" />
         <script>
@@ -39,23 +39,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -64,20 +64,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>(Не)Математика диверсификации-3: современная теория портфеля</h1>
-            <div class="meta">
-                    <p class="description">Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще.</p>
-                    <p> Обновлено: <time>2020-04-21</time> </p>
+<article>
+    <header>
+        <h1>(Не)Математика диверсификации-3: современная теория портфеля</h1>
+        <div class="meta">
+                <p class="description">Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще.</p>
+                <p> Обновлено: <time>2020-06-07</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Гарри Марковиц получил свою премию имени Нобеля за удивительную в своей простоте, изяществе и очевидности идею. Пусть у нас есть N активов, доходность каждого из которых распределена по нормальному закону с ожидаемым значением $r_i$ и дисперсией (т.е. мерой неопределённости, она же мера риска в этой теории) $\sigma^2_i$. Их доли в портфеле — $w_i$. Тогда доходность портфеля распределена также по нормальному закону с
+    <div class="content">
+        <p>Гарри Марковиц получил свою премию имени Нобеля за удивительную в своей простоте, изяществе и очевидности идею. Пусть у нас есть N активов, доходность каждого из которых распределена по нормальному закону с ожидаемым значением $r_i$ и дисперсией (т.е. мерой неопределённости, она же мера риска в этой теории) $\sigma^2_i$. Их доли в портфеле — $w_i$. Тогда доходность портфеля распределена также по нормальному закону с
 $$r_p = \sum_i w_i r_i$$
 $$\sigma^2_p = \sum_i w_i^2 \sigma_i^2 + \sum_{i}\sum_{j \neq i} w_i \, w_j \, \sigma_i \, \sigma_j \, \rho_{i,j},$$
 где $\rho_{i,j}$ — корреляция (мера согласованности) доходностей $i$-го и $j$-го активов. Это просто математическое свойство нормальных распределений.</p>
@@ -104,7 +102,7 @@ $$\sigma^2_p = \sum_i w_i^2 \sigma_i^2 + \sum_{i}\sum_{j \neq i} w_i \, w_j \, \
 <p>Присутствие в портфеле активов с высокой волатильностью всё-таки позволяет получить дополнительную доходность (сверх средневзвешенной доходности активов) от ребалансировки. Уильям Бернстайн <a href="http://www.efficientfrontier.com/ef/996/rebal.htm">предложил следующую эмпирическую оценку</a> её размера:
    $$ b_{p} = \frac{1}{2} \sum_{i}\sum_{j \neq i} b_{ij} $$
    $$ b_{ij} = w_i\,w_j \left( \sigma_i\,\sigma_j (1-\rho_{ij}) + (\sigma_i - \sigma_j)^2/2 \right) $$
-   На исторических данных эта оценка давала точность порядка 0,05%г, но неизвестно, каким этот бонус от ребалансировки будет в будущем. В табличке ниже приведены максимально возможные (при соотношении активов 50/50) его значения в %г, рассчитанные по величинам корреляции и волатильности активов за 2007–2020г.</p>
+   На исторических данных эта оценка имела погрешность порядка 0,05%г, но неизвестно, каким этот бонус от ребалансировки будет в будущем. В табличке ниже приведены максимально возможные (при соотношении активов 50/50) его значения в %г, рассчитанные по величинам корреляции и волатильности активов за 2007–2020г.</p>
 <table>
 <thead>
 <tr>
@@ -297,9 +295,9 @@ $$\sigma^2_p = \sum_i w_i^2 \sigma_i^2 + \sum_{i}\sum_{j \neq i} w_i \, w_j \, \
 <p>Риск портфеля, понимаемый как отставание от целевой доходности, зависит от <em>доходности</em> его составляющих, а не исторической корреляции между ними. Добавление в портфель «защитных» низкодоходных инструментов <em>всегда</em> будет снижать его ожидаемую доходность.</p>
 </li>
 </ol>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/mpt&title=(Не)Математика диверсификации-3: современная теория портфеля&description=Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/mpt" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -307,25 +305,15 @@ $$\sigma^2_p = \sum_i w_i^2 \sigma_i^2 + \sum_{i}\sum_{j \neq i} w_i \, w_j \, \
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/mpt" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
