--- a/notes/piketti2/index.html
+++ b/notes/piketti2/index.html
@@ -39,23 +39,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -64,20 +64,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Социальное неравенство и налоги</h1>
-            <div class="meta">
-                    <p class="description">Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства.</p>
-                    <p> Обновлено: <time>2020-04-25</time> </p>
+<article>
+    <header>
+        <h1>Социальное неравенство и налоги</h1>
+        <div class="meta">
+                <p class="description">Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства.</p>
+                <p> Обновлено: <time>2020-04-25</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>В предыдущей заметке с <a href="/notes/piketti">критикой Пикетти</a> мы остановились на том, что социальное расслоение не порождается само по себе экономическим ростом и оторванной от него отдачей на капитал, а требует отдельной модели. Я буду опираться на рассуждения и расчёты Лекса Кравецкого (изложены они довольно пространно: <a href="https://22century.ru/popular-science-publications/orlyanka2">1 часть</a>, <a href="https://22century.ru/popular-science-publications/orlyanka3">2 часть</a>), но предложу более простую модель.</p>
+    <div class="content">
+        <p>В предыдущей заметке с <a href="/notes/piketti">критикой Пикетти</a> мы остановились на том, что социальное расслоение не порождается само по себе экономическим ростом и оторванной от него отдачей на капитал, а требует отдельной модели. Я буду опираться на рассуждения и расчёты Лекса Кравецкого (изложены они довольно пространно: <a href="https://22century.ru/popular-science-publications/orlyanka2">1 часть</a>, <a href="https://22century.ru/popular-science-publications/orlyanka3">2 часть</a>), но предложу более простую модель.</p>
 <p>Человек всю жизнь принимает решения и с ним происходят какие-то события. Они, прямо или косвенно, приводят к тому, что доля приходящихся на человека благ увеличивается или уменьшается. За счёт остальных людей или создания новых благ — сейчас не важно: мы рассматриваем модель неравенства, а не экономического роста. Неравенство в капитале, как мы увидели в предыдущей статье, определяется преимущественно неравенством в доходе. Конечно, оно будет дополнительно усиливаться за счёт того, что люди с высоким достатком имеют обычно и более высокую норму сбережения, но, т.к. это эффект вторичный, сосредоточимся здесь на неравенстве в доходе. Люди, имеющие высокий доход/капитал, имеют и больше возможностей, и больше рисков их потерять (и наоборот), поэтому будем считать, что принимаемые решения изменяют получаемую человеком долю благ на определённый процент, а не на абслютную величину. Наконец, будем эти изменения считать абсолютно случайными.</p>
 <p>Начав с идеально равномерного распределения благ в обществе, мы очень быстро приходим к характерному для практически всех обществ логнормальному, как на этом рисунке.</p>
 <p><img src=/notes/piketti2/y_hist.svg style="width: 100%; height: 50wv" /></p>
@@ -101,9 +99,9 @@
 <p>Распределение благ не равномерное, как в предыдущих примерах, а только в пользу бедных (25% беднейших на следующем графике), значительно снижает неравенство. При этом, вопреки моим опасениям, средний класс не вымывается.</p>
 <p><img src=/notes/piketti2/y_dist_social_tax.svg style="width: 100%; height: 50wv" /></p>
 <p>Ещё одно замечание, которое я хотел бы сделать в связи с налогами. Оценивать и регулировать неравенство в рыночной экономике, где практически все блага пересчитаны в деньги — достаточно просто: считай доход, облагай налогом, полученные деньги перераспределяй. В плановой экономике, где действуют те же законы, но доступ к благам определяется не деньгами, а разного рода привилегиями и связями — это гораздо сложнее.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/piketti2&title=Социальное неравенство и налоги&description=Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/piketti2" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -111,25 +109,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/piketti2" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/piketti"> &lt;&lt; Полезно решать дифференциальные уравнения: Тома Пикетти </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/piketti"> &lt;&lt; Полезно решать дифференциальные уравнения: Тома Пикетти </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
