--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Безответственное отношение к деньгам</h1>
-            <div class="meta">
-                    <p class="description">«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+<article>
+    <header>
+        <h1>Безответственное отношение к деньгам</h1>
+        <div class="meta">
+                <p class="description">«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
+                <p> Обновлено: <time>2019-12-29</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>В продолжение <a href="/notes/capital">заметки про капитал</a>, разберём установки, ведущие к саморазрушительному финансовому поведению.</p>
+    <div class="content">
+        <p>В продолжение <a href="/notes/capital">заметки про капитал</a>, разберём установки, ведущие к саморазрушительному финансовому поведению.</p>
 <h2 id="1">1. «Мне не хватает»</h2>
 <p>Если исключить случаи крайней бедности, когда приходится выбирать между едой, одеждой и коммуналкой, — это признак расточительства. Впрочем, необходимость выбирать между едой, одеждой и коммуналкой также может отсюда происходить.</p>
 <p>Если сознательно не контролировать и не ограничивать расходы — они будут только расти, пока не начнут съедать все деньги и даже больше. При этом удовольствия от жизни вам сильно не прибавится. Потому что человек чувствует лишь относительную разницу с фоном. Предположим, что расходы превращаются в качество жизни со 100%-ным КПД (что, конечно, не так, и вообще этот КПД может быть отрицательным), а ваш начальный уровнь расходов — 20Кр. И вот вы, допустим, нашли новую работу и разом их удвоили. Первое время вы чувствуете себя царём Соломоном и Цезарем Августом в одном лице, а потом оказывается, что ничего особо не изменилось, фон устаканился, воодушевление прошло. Но мозг запомнил, откуда оно берётся, хочется повторить. А чтобы повторить расходы надо вновь удваивать, нужно выйти уже на 80Кр чтобы достичь того же эффекта.</p>
@@ -84,9 +82,9 @@
 <li><strong>Самое главное.</strong> Он не улучшает финансовое положение; вы просто поднимаетесь над пропастью, чтобы больнее упасть. Ведь даже в случае успеха, ваш доход равен вашим тратам. А снижать расходы — болезненно. Физически болезненно и уничтожает морально. Т.е. вы достигли только того, что усилили свою боль при неизбежном снижении своей продуктивности. Успешный самодостаточный бизнес с таким подходом построить едва ли удастся, потому что бизнес — это про снижение издержек и разумное реинвестирование прибыли. А подход провоцирует на риск и изъятие прибыли (а то и выручки) на текущее потребление владельца.</li>
 </ol>
 <p>Что делать — очевидно: не меньше 20–30% доходов идут в сбережения сразу, рост доходов должен опережать рост расходов (в относительном измерении: скажем, на рост доходов на 20% отвечаем ростом расходов на 5–10), рискуем либо уже заработанными деньгами (но в капитал не залезаем), либо чужими (которые в случае провала не надо возвращать).</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/recklessness&title=Безответственное отношение к деньгам&description=«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -94,25 +92,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/finplan"> Личный финансовый план — не нужен &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/finplan"> Личный финансовый план — не нужен &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
