--- a/notes/workersfactories.html
+++ b/notes/workersfactories.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,28 +50,26 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Фабрики — рабочим</h1>
-            <div class="meta">
-                    <p class="description">Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+<article>
+    <header>
+        <h1>Фабрики — рабочим</h1>
+        <div class="meta">
+                <p class="description">Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели.</p>
+                <p> Обновлено: <time>2019-12-29</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Представим себя на какой-нибудь банальной кастрюльной фабрике начала XX века. На фабрике 1000 рабочих, каждый получает условные 10р/мес, и делает 100 кастрюль, которые продаются по 20коп. Содержание фабрики, кроме з/п, обходится в 8000 рублей. Оставшиеся 2000 забирает хозяин. Из цеха слышно гневное перешёптывание: «Эксплуататор! Кровопийца!». Что неудивительно: хозяин получает в 200 раз больше рабочего. Ситуация явно революционная.</p>
+    <div class="content">
+        <p>Представим себя на какой-нибудь банальной кастрюльной фабрике начала XX века. На фабрике 1000 рабочих, каждый получает условные 10р/мес, и делает 100 кастрюль, которые продаются по 20коп. Содержание фабрики, кроме з/п, обходится в 8000 рублей. Оставшиеся 2000 забирает хозяин. Из цеха слышно гневное перешёптывание: «Эксплуататор! Кровопийца!». Что неудивительно: хозяин получает в 200 раз больше рабочего. Ситуация явно революционная.</p>
 <p>Вот хозяин добыл технологию, настолько улучшающую качество кастрюль, что их теперь готовы покупать в том же количестве по вдвое большей цене (а по старой цене — вчетверо больше, потому что у конкурентов хуже качество за те же деньги). Что он будет делать? Поднимет цены, на «сверхприбыль» купит новые здания и станки, поднимет (чуть-чуть, до 11р, скажем) з/п рабочим, чтобы переманить рабочих у конкурентов. Что получится? 5000 рабочих трудятся за 12р/мес, делая по 100 кастрюль, которые продаются за 18коп (цену же выгодно снижать, пока рост спроса покрывает снижение прибыли на единицу товара). Содержание фабрик подорожало до 30000 рублей без з/п (эффект масштаба), а хозяину остаётся уже целых 5000 рублей. Тут уже точно революция.</p>
 <p>Пусть рабочие выгнали со «своей» фабрики хозяина, как только узнали, что сверхприбылями от новой технологии он с ними делиться не намерен. Интересы хозяина — увеличение прибыли за счёт наращивания производства и снижения цен находятся в прямом конфликте с интересами рабочих — поднять себе зарплату до 32р/мес (2 рубля — это те деньги, которые хозяин «отбирал» у рабочего) и оставить всё как есть. На этом месте вместо «свободы, равенства и братства» у нас наступают средневековые цеховые порядки: рабочие привилегированной фабрики «окапываются» от бывших собратьев, строжайше охраняя ценную технологию. Не только её распространение, но даже и расширение производства невозможно: придётся не только новых рабочих к себе принять, но и цены снизить для увеличения спроса — двойной удар по доходам «старых» рабочих. Вместо дешёвого и качественного изобилия общество получает дорогой и некачественный дефицит (причём, т.к. у нас почти всё общество — рабочие, само же и заинтересовано в том, чтобы он таковым оставался). И остановку технического прогресса: если хозяин может рискнуть своим капиталом (хозяин ведь всего за несколько лет получит достаточно денег для открытия нового производства), то в коллективе рабочих капитал размазывается настолько тонким слоем, что и рисковать-то нечем, кроме единственного источника к существованию. И рост насилия: а как иначе заставить эти «цеховые группы» учитывать интересы всех остальных?</p>
 <p>А если никакой технологии не было? Выгнали хозяина, организовали «фабричный комитет», установили всем з/п 12р. Сами себе хозева, рабочие соседних фабрик следуют примеру...</p>
 <p>Потом выясняется, что в какой-то месяц продаётся 120000 кастрюль, а в какой-то и 80000. Сегодня получил 16р и прогулял на радостях, завтра 8 и занимаешь по соседям, а послезавтра станок сломался и вся фабрика не только сидит без зарплаты, но и скидывается по 5р с носа на починку. И управление фабрикой теперь дело коллективное. Раньше рабочий как автомат клепал себе 100 кастрюль в месяц, а теперь и в собраниях фабричного комитета участвовать, и во всяких комиссиях, и по вопросам управления голосовать, и с братьями-рабочими обсуждать что правильно, а что нет. В общем, больше 80 кастрюль в месяц ну никак не получается. Разве только 12-часовой рабочий день вводить, которого не только при бывшем кровопийце не было, но даже и при его отце, который был уже совсем кровопийца. А при 80 кастрюлях в день рабочий максимум 8р в месяц может получить. Повысить цены — ещё больше потеряешь: не купят. Остаётся давить по «партийной» линии на поставщиков, чтобы снижали цены (но это отдаётся обратно в виде снижения спроса), и экономить на содержании фабрики: качество снижается, производительность падает ещё сильнее, попадая в положительную обратную связь. Фабрика самоуничтожается. <strong>Разруха.</strong> И насилие.</p>
 <p>Собственно говоря, вот весь наш XX век. Узнаваем и неизбежен. И кажется, что мы его уже пережили (хотя сторонников возврата к этим идеям ещё много, и к ним даже опять прислушиваются, <a href="https://www.oaktreecapital.com/docs/default-source/memos/political-reality-meets-economic-reality.pdf">даже в США</a>), но эта проблема теперь подкрадывается с другой стороны. Фондовый рынок. В развитых странах практически не осталось крупных предприятий, контроль за которыми сохранялся бы руках одного или нескольких владельцев. Они, фактически, стали принадлежать рабочим же. Но, возможно, нас спасёт то, что они принадлежат не их же рабочим. Эта модель ещё требует исследования.</p>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/workersfactories&title=Фабрики — рабочим&description=Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -79,25 +77,15 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/fairprice"> &lt;&lt; Справедливая цена </a></div>
-    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/piketti"> Полезно решать дифференциальные уравнения: Тома Пикетти &gt;&gt; </a></div>
-    </div>
-</div>
-</div>
+<div class="prevupnext"><a class="prev" href="/notes/fairprice"> &lt;&lt; Справедливая цена </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/piketti"> Полезно решать дифференциальные уравнения: Тома Пикетти &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
