--- a/pages/sources.html
+++ b/pages/sources.html
@@ -25,23 +25,23 @@
 </head>
 <body>
     <header>
-        <nav class="pure-menu pure-menu-horizontal">
+        <nav class="menu">
             <label class="menu-container">
                 <div class="menu-head">
-                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
-                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
-                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                        <a href="https://t.me/on_fin" class="menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
                 <input type="checkbox" />
-                <span class="checkmark"><i>&equiv;</i></span>
+                <div class="checkmark">&equiv;</div>
                 <ul class="menu">
-                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
-                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -50,20 +50,18 @@
     <main>
 
 
-<div class="pure-g">
-<div class="page pure-u-1 pure-u-lg-9-12">
-    <article>
-        <header>
-            <h1>Источники</h1>
-            <div class="meta">
-                    <p class="description">Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты.</p>
-                    <p> Обновлено: <time>2019-10-28</time> </p>
+<article>
+    <header>
+        <h1>Источники</h1>
+        <div class="meta">
+                <p class="description">Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты.</p>
+                <p> Обновлено: <time>2019-10-28</time> </p>
 
-            </div>
-        </header>
+        </div>
+    </header>
 
-        <div class="content">
-            <p>Финансы как хобби требуют работы с достаточно большим количеством источников информации, разной степени важности и оперативности. Здесь укажу наиболее полезные.</p>
+    <div class="content">
+        <p>Финансы как хобби требуют работы с достаточно большим количеством источников информации, разной степени важности и оперативности. Здесь укажу наиболее полезные.</p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Практическая информация</a><ul>
@@ -150,9 +148,9 @@
 <li><strong><a href="http://arsagera.ru/kuda_i_kak_investirovat/">Арсагера</a></strong> — а это столп просвещения в деле <em>активных</em> инвестиций.</li>
 <li><a href="http://activeinvestor.pro/">Активный инвестор</a>, <a href="https://nakhusha.livejournal.com">nakhusha</a>, <a href="https://gregbar.livejournal.com">gregbar</a>, <a href="https://zhu-s.livejournal.com">zhu-s</a>, <a href="https://borodainvestora.ru/">Борода инвестора</a>, <a href="https://at6.livejournal.com">at6</a>, <a href="https://roundabout.ru/">Вокруг да около</a>, <a href="https://rostsber.ru">Рост сбережений</a> — ещё финансовые блоги, которые я читаю.</li>
 </ul>
-        </div>
-        <aside>
-            <div style="display: flex; flex-direction: column; text-align: right;">
+    </div>
+    <aside>
+        <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
             <a href="https://vk.com/share.php?url=https://onfin.github.io/pages/sources&title=Источники&description=Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9b;</i></a>
@@ -160,12 +158,10 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
-        <a class="donate-button" href="/donate">Спасибо</a>
+        <a class="donate-button" href="/donate">Отблагодарить</a>
     </div>
-        </aside>
-    </article>
-</div>
-</div>
+    </aside>
+</article>
 
     </main>
 
